# whacka-molee

./: .gitignore  Cargo.toml  LICENSE  common_errors.md  roadmap.md  shell.nix
assets/locales/en/: game.ftl  templates.json
assets/locales/es/: dictionaries.json  game.ftl  templates.json
assets/locales/pl/: dictionaries.json  game.ftl  templates.json
src/: asset_loading.rs  asset_manager.rs  game_states.rs  localization.rs  main.rs  main_menu.rs  options_menu.rs  physics.rs  text_generator.rs  ui_styles.rs
src/game_objects/: player.rs  projectile.rs  terrain.rs
src/text_generator/: dictionaries.json
src/ui/: main_menu.rs  mod.rs
src/views/: main_menu_view.rs  match_view.rs  options_view.rs
